// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentHeader renders with actions if provided 1`] = `
<Provider
  store={
    {
      "@@observable": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <CommentHeader
    commentReply={
      {
        "author": {
          "avatarUrl": "https://example.com/avatar.jpg",
          "name": "Jane Doe",
        },
        "date": 1737085593070,
      }
    }
    focused={false}
    onDelete={[Function]}
    onEdit={[Function]}
    onResolve={[Function]}
    store={
      {
        "@@observable": [Function],
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  >
    <div
      className="comment-header"
    >
      <div
        className="comment-header__actions"
      >
        <div
          className="comment-header__action comment-header__action--more"
        >
          <details
            onClick={[Function]}
            open={false}
          >
            <summary
              aria-expanded={false}
              aria-haspopup="menu"
              aria-label="More actions"
              onClick={[Function]}
              role="button"
            >
              <Icon
                name="dots-horizontal"
              >
                <svg
                  aria-hidden="true"
                  className="icon icon-dots-horizontal"
                >
                  <use
                    href="#icon-dots-horizontal"
                  />
                </svg>
              </Icon>
            </summary>
            <div
              className="comment-header__more-actions"
              role="menu"
            >
              <button
                onClick={[Function]}
                role="menuitem"
                type="button"
              >
                Edit
              </button>
              <button
                onClick={[Function]}
                role="menuitem"
                type="button"
              >
                Delete
              </button>
              <button
                onClick={[Function]}
                role="menuitem"
                type="button"
              >
                Resolve
              </button>
            </div>
          </details>
        </div>
      </div>
      <img
        alt=""
        className="comment-header__avatar"
        decoding="async"
        loading="lazy"
        src="https://example.com/avatar.jpg"
      />
      <span>
        <p
          className="comment-header__author"
        >
          Jane Doe
        </p>
        <p
          className="comment-header__date"
        >
          <time
            dateTime="2025-01-17T03:46:33.070Z"
          >
            Jan 17, 2025, 12:46 AM
          </time>
        </p>
      </span>
    </div>
  </CommentHeader>
</Provider>
`;

exports[`CommentHeader renders without crashing 1`] = `
<Provider
  store={
    {
      "@@observable": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <CommentHeader
    commentReply={
      {
        "author": {
          "avatarUrl": "https://example.com/avatar.jpg",
          "name": "John Doe",
        },
        "date": 1737085593052,
      }
    }
    focused={false}
    store={
      {
        "@@observable": [Function],
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  >
    <div
      className="comment-header"
    >
      <div
        className="comment-header__actions"
      />
      <img
        alt=""
        className="comment-header__avatar"
        decoding="async"
        loading="lazy"
        src="https://example.com/avatar.jpg"
      />
      <span>
        <p
          className="comment-header__author"
        >
          John Doe
        </p>
        <p
          className="comment-header__date"
        >
          <time
            dateTime="2025-01-17T03:46:33.052Z"
          >
            Jan 17, 2025, 12:46 AM
          </time>
        </p>
      </span>
    </div>
  </CommentHeader>
</Provider>
`;
